crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_all_must_occur_non_atom_only_input.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<Ident>() {
            let c = p.peek_n(1);
            match p.to_atom::<FooAtoms>(c) {
                FooAtoms::None => {
                    let v0 = p.parse::<Ident>()?;
                    return Ok(Self::None { 0: v0 });
                }
                _ => {}
            }
        }
        let mut v0: Option<Ident> = None;
        let mut v1: Option<Length> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::Auto
            {
                v0 = Some(p.parse::<Ident>()?);
                continue;
            }
            if v1.is_none() && p.peek::<Length>() {
                v1 = Some(p.parse::<Length>()?);
                continue;
            }
            break;
        }
        if v0.is_none() && v1.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self::Valued {
            auto: v0,
            length: v1,
        });
    }
}
