crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_all_must_occur_overlapping_lead_atoms.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let mut u0: Option<Ident> = None;
        let mut u1: Option<Ident> = None;
        let mut u2: Option<Ident> = None;
        let mut _alternative: usize = 0;
        loop {
            let c = p.peek_n(1);
            if u0.is_none() && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::Wrap
            {
                u0 = Some(p.parse::<Ident>()?);
                continue;
            }
            if u1.is_none() && _alternative == 0 && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::A
            {
                _alternative = 1usize;
                u1 = Some(p.parse::<Ident>()?);
                continue;
            }
            if u2.is_none() && _alternative == 0 && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::B
            {
                _alternative = 2usize;
                u2 = Some(p.parse::<Ident>()?);
                continue;
            }
            break;
        }
        if u0.is_none() && u1.is_none() && u2.is_none() {
            return Err(
                ::css_parse::Diagnostic::new(
                    p.peek_n(1),
                    ::css_parse::Diagnostic::unexpected,
                ),
            )?;
        }
        match _alternative {
            1usize => {
                return Ok(Self::WrapA { wrap: u0, a: u1 });
            }
            2usize => {
                return Ok(Self::WrapB { wrap: u0, b: u2 });
            }
            _ => {
                return Ok(Self::WrapA { wrap: u0, a: u1 });
            }
        }
    }
}
