crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_mixed_variants.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for FlexValue {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::{Parse, Peek};
        if p.peek::<AutoKeyword>() {
            let f0 = p.parse::<AutoKeyword>()?;
            Ok(Self::Auto { 0: f0 })
        } else if p.peek::<Length>() {
            let mut min: Option<Length> = None;
            let mut max: Option<Length> = None;
            loop {
                let c = p.peek_n(1);
                if min.is_none() && <Length>::peek(p, c) {
                    min = Some(p.parse::<Length>()?);
                    continue;
                }
                if max.is_none() && <Length>::peek(p, c) {
                    let inner = p.parse::<Length>()?;
                    if let Some(i) = ::css_parse::ToNumberValue::to_number_value(
                        &inner,
                    ) {
                        let c: ::css_parse::Cursor = inner.into();
                        if 0 > i {
                            use ::css_parse::ToSpan;
                            Err(
                                crate::Diagnostic::new(
                                    c,
                                    crate::Diagnostic::number_too_small,
                                ),
                            )?
                        }
                    }
                    max = Some(inner);
                    continue;
                }
                break;
            }
            if min.is_none() || max.is_none() {
                let c = p.peek_n(1);
                Err(crate::Diagnostic::new(c, crate::Diagnostic::unexpected))?
            }
            Ok(Self::MinMax {
                min: min.unwrap(),
                max: max.unwrap(),
            })
        } else {
            let f0 = p.parse::<Length>()?;
            Ok(Self::Length { 0: f0 })
        }
    }
}
