crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_one_must_occur_non_ident_atom_field.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for VoiceVolume {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let mut v0: Option<Ident> = None;
        let mut v1: Option<Decibel> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::Soft
            {
                v0 = Some(p.parse::<Ident>()?);
                continue;
            }
            if v1.is_none() && p.peek::<Decibel>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::Db
            {
                v1 = Some(p.parse::<Decibel>()?);
                continue;
            }
            break;
        }
        if v0.is_none() && v1.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self::Soft {
            soft: v0,
            decibel: v1,
        });
    }
}
