crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_one_must_occur_variant_mixed_atom_and_type_fields.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for VerticalAlign {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let checkpoint = p.checkpoint();
        if let Ok(v) = (|| -> ::css_parse::Result<Self> {
            let mut v0: Option<Ident> = None;
            let mut v1: Option<AlignmentBaseline> = None;
            let mut v2: Option<BaselineShift> = None;
            loop {
                let c = p.peek_n(1);
                if v0.is_none() && p.peek::<Ident>()
                    && p.to_atom::<CssAtomSet>(c) == CssAtomSet::First
                {
                    v0 = Some(p.parse::<Ident>()?);
                    continue;
                }
                if v1.is_none() && p.peek::<AlignmentBaseline>() {
                    v1 = Some(p.parse::<AlignmentBaseline>()?);
                    continue;
                }
                if v2.is_none() && p.peek::<BaselineShift>() {
                    v2 = Some(p.parse::<BaselineShift>()?);
                    continue;
                }
                break;
            }
            if v0.is_none() && v1.is_none() && v2.is_none() {
                let c = p.peek_n(1);
                Err(
                    ::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected),
                )?
            }
            return Ok(Self::First {
                first: v0,
                alignment_baseline: v1,
                baseline_shift: v2,
            });
        })() {
            return Ok(v);
        }
        p.rewind(checkpoint);
        let mut v0: Option<Ident> = None;
        let mut v1: Option<AlignmentBaseline> = None;
        let mut v2: Option<BaselineShift> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<Ident>()
                && p.to_atom::<CssAtomSet>(c) == CssAtomSet::Last
            {
                v0 = Some(p.parse::<Ident>()?);
                continue;
            }
            if v1.is_none() && p.peek::<AlignmentBaseline>() {
                v1 = Some(p.parse::<AlignmentBaseline>()?);
                continue;
            }
            if v2.is_none() && p.peek::<BaselineShift>() {
                v2 = Some(p.parse::<BaselineShift>()?);
                continue;
            }
            break;
        }
        if v0.is_none() && v1.is_none() && v2.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self::Last {
            last: v0,
            alignment_baseline: v1,
            baseline_shift: v2,
        });
    }
}
