crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_struct_and_tuple_mixed.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for FlexValue {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<Ident>() {
            let v0 = p.parse::<Ident>()?;
            return Ok(Self::Auto { 0: v0 });
        }
        if p.peek::<Length>() {
            let v0 = p.parse::<Length>()?;
            if p.peek::<Length>() {
                let v1 = p.parse::<Length>()?;
                return Ok(Self::MinMax { min: v0, max: v1 });
            }
            return Ok(Self::Length { 0: v0 });
        }
        if p.peek::<Percentage>() {
            let v0 = p.parse::<Percentage>()?;
            return Ok(Self::Percentage { 0: v0 });
        }
        if p.peek::<String>() {
            let v0 = p.parse::<String>()?;
            let v1 = p.parse::<Unit>()?;
            return Ok(Self::Calc { expr: v0, unit: v1 });
        }
        return Err(
            ::css_parse::Diagnostic::new(
                p.peek_n(1),
                ::css_parse::Diagnostic::unexpected,
            ),
        )?;
    }
}
