crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_struct_variants_one_must_occur_siblings.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for FlexWrap {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<Ident>() {
            let c = p.peek_n(1);
            match p.to_atom::<FooAtoms>(c) {
                FooAtoms::Nowrap => {
                    let v0 = p.parse::<Ident>()?;
                    return Ok(Self::Nowrap { 0: v0 });
                }
                _ => {}
            }
        }
        let mut u0: Option<Ident> = None;
        let mut u1: Option<Ident> = None;
        let mut u2: Option<Ident> = None;
        let mut _alternative: usize = 0;
        loop {
            let c = p.peek_n(1);
            if u0.is_none() && _alternative == 0 && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::Wrap
            {
                _alternative = 1usize;
                u0 = Some(p.parse::<Ident>()?);
                continue;
            }
            if u1.is_none() && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::Balance
            {
                u1 = Some(p.parse::<Ident>()?);
                continue;
            }
            if u2.is_none() && _alternative == 0 && p.peek::<Ident>()
                && p.to_atom::<FooAtoms>(c) == FooAtoms::WrapReverse
            {
                _alternative = 2usize;
                u2 = Some(p.parse::<Ident>()?);
                continue;
            }
            break;
        }
        if u0.is_none() && u1.is_none() && u2.is_none() {
            return Err(
                ::css_parse::Diagnostic::new(
                    p.peek_n(1),
                    ::css_parse::Diagnostic::unexpected,
                ),
            )?;
        }
        match _alternative {
            1usize => {
                return Ok(Self::Wrap {
                    wrap: u0,
                    balance: u1,
                });
            }
            2usize => {
                return Ok(Self::WrapReverse {
                    wrap_reverse: u2,
                    balance: u1,
                });
            }
            _ => {
                return Ok(Self::Wrap {
                    wrap: u0,
                    balance: u1,
                });
            }
        }
    }
}
