crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_struct_variants_with_ranges.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Transform {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::{Parse, Peek};
        if p.peek::<Length>() {
            let x = p.parse::<Length>()?;
            let y = p.parse::<Percentage>()?;
            if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&y) {
                let c: ::css_parse::Cursor = y.into();
                if !(-100..=100).contains(&i) {
                    use ::css_parse::ToSpan;
                    Err(
                        crate::Diagnostic::new(
                            c,
                            crate::Diagnostic::number_out_of_bounds,
                        ),
                    )?
                }
            }
            return Ok(Self::Translate { x: x, y: y });
        }
        {
            let x = p.parse::<Number>()?;
            if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&x) {
                let c: ::css_parse::Cursor = x.into();
                if 0 > i {
                    use ::css_parse::ToSpan;
                    Err(crate::Diagnostic::new(c, crate::Diagnostic::number_too_small))?
                }
            }
            let y = p.parse::<Number>()?;
            if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&y) {
                let c: ::css_parse::Cursor = y.into();
                if 0 > i {
                    use ::css_parse::ToSpan;
                    Err(crate::Diagnostic::new(c, crate::Diagnostic::number_too_small))?
                }
            }
            return Ok(Self::Scale { x: x, y: y });
        }
    }
}
