crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_variant_all_must_occur_with_keyword.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for AllMustOccurEnum {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<String>() {
            let v0 = p.parse::<String>()?;
            return Ok(Self::Simple { 0: v0 });
        }
        let mut v0: Option<AutoValue> = None;
        let mut v1: Option<NoneValue> = None;
        let mut v2: Option<Length> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<AutoValue>()
                && p.to_atom::<FooKeywords>(c) == FooKeywords::Auto
            {
                v0 = Some(p.parse::<AutoValue>()?);
                continue;
            }
            if v1.is_none() && p.peek::<NoneValue>()
                && p.to_atom::<FooKeywords>(c) == FooKeywords::None
            {
                v1 = Some(p.parse::<NoneValue>()?);
                continue;
            }
            if v2.is_none() && p.peek::<Length>() {
                v2 = Some(p.parse::<Length>()?);
                continue;
            }
            break;
        }
        if v0.is_none() || v1.is_none() || v2.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self::Complex {
            auto_field: v0.unwrap(),
            none_field: v1.unwrap(),
            length: v2.unwrap(),
        });
    }
}
